Change background color again

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App #2</title>
+    <title>Weather App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             padding: 0;
-            background-color: #14146c;
+            background-color: #b10824;
         }
         .container {
             max-width: 600px;
