--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             padding: 0;
-            background-color: #b10824;
+            background-color: #2adcdf;
         }
         .container {
             max-width: 600px;
