--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App #2</h1>
+        <h1>Weather App</h1>
         {% if error %}
             <p class="error">{{ error }}</p>
         {% endif %}
